# fathom-mode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  cli.py
ftg/: __init__.py  __main__.py  backend.py  causal.py  cli.py  compiler.py  dimensions.py  extractor.py  fathom.py  graph.py  models.py  questioner.py  scoring.py  utils.py
ftg/contrib/: __init__.py  anthropic.py  deepseek.py  gemini.py  openai.py  openclaw.py
ftg/data/: SKILL.md
openclaw-skill/: SKILL.md  install.sh
tests/: test_backend.py  test_causal_tracker.py  test_cli.py  test_compiler.py  test_dimension_bound_responses.py  test_extractor.py  test_fathom_context_split.py  test_fathom_round_output.py  test_graph.py  test_questioner.py  test_round_actions.py  test_scoring.py
